[package]
name = "fibers_transport"
version = "0.1.2"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Transport layer abstraction built on top of [`fibers`] crate"
homepage = "https://github.com/sile/fibers_transport"
repository = "https://github.com/sile/fibers_transport"
readme = "README.md"
keywords = ["fibers"]
categories = ["network-programming", "asynchronous"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/fibers_transport"}
codecov = {repository = "sile/fibers_transport"}

[dependencies]
bytecodec = "0.4"
factory = "0.1"
fibers = "0.1"
futures = "0.1"
trackable = "0.2"

[dev-dependencies]
fibers_global = "0.1"